ProjetCompil/Verif/Test/fail/interval1.cas
program
   A : 3.14 .. 3;
begin
   NULL;
end.